--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>MTM828 - Home</title>
         <link rel="icon" href="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel|Alata">
-        <link rel="stylesheet" href="https://mtm828.github.io/RECOURCES/CSS.css">
+        <link rel="stylesheet" href="/RECOURCES/CSS.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="keywords" content="MTM828, mtm, 828, scratch, github">
+        <meta name="keywords" content="mtm828, mtm, 828, github, scratch, developer">
         <meta name="description" content="MTM828">
         <meta name="author" content="MTM828">
         <meta http-equiv="refresh" content="120">
@@ -41,7 +41,7 @@
             <p id="description">Just a moment...</p>
             <ul class="footer">
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a></li>
-                <li><a href="https://mtm828.github.io/index.html">Home</a></li>
+                <li><a href="https://mtm828.com/index.html">Home</a></li>
             </ul>
         </div>
     </body>
@@ -66,7 +66,7 @@
                     desc.innerHTML += "</ul></div><br>"
                 }
             }
-            ajax.open("GET", "https://mtm828.github.io/RECOURCES/JSON/ABOUT.json", true);
+            ajax.open("GET", "https://mtm828.com/RECOURCES/JSON/ABOUT.json", true);
             ajax.send();
         }
         window.onload = function() {
