--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta name="charset" content="utf-8">
     </head>
     <body>
-        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel; width: 125px; height: 125px;">MTM828</h1></a>
+        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel; width:">MTM828</h1></a>
         <ul class="topNav" id="topNav">
             <li><a href="">Link A</a></li>
             <li><a href="">Link B</a></li>
@@ -22,7 +22,7 @@
             </li>
         </ul>
         <div class="topNavbarWrapper"></div>
-        <div id="loadingScreen" style="position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box;"><div style="border: 10px solid #cccccc; border-radius: 50%; transition: spin 1s linear infinite; border-top: 10px solid dodgerblue;"></div></div>
+        <div id="loadingScreen" style="position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box;"><div style="border: 10px solid #cccccc; border-radius: 50%; transition: spin 1s linear infinite; border-top: 10px solid dodgerblue; width: 125px; height: 125px; text-align: center;"></div></div>
         <div class="pageContent">
             <p id="description">Just a moment...</p>
             <ul class="footer">
