--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <meta name="author" content="MTM828">
         <meta http-equiv="refresh" content="120">
         <meta name="charset" content="utf-8">
+        <style>
+            @keyframes spin {
+                0% {transform: rotate(0deg);}
+                100% {transform: rotate(360deg);}
+            }
+        </style>
     </head>
     <body>
         <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel; width:">MTM828</h1></a>
