--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <meta name="author" content="MTM828">
         <meta http-equiv="refresh" content="120">
         <meta name="charset" content="utf-8">
-        <!--<style>
+        <style>
             @keyframes spin {
                 0% {transform: rotate(0deg);}
                 100% {transform: rotate(360deg);}
-            }-->
+            }
         </style>
     </head>
     <body>
