--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             ajax.send();
         }
         window.onload = function() {
+            setTimeout(1000);
             hideLoadingScreen();
             initDesc();
         }
