--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </li>
         </ul>
         <div class="topNavbarWrapper"></div>
-        <div id="loadingScreen" style="position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box;"><div style="border: 30px solid #cccccc; border-radius: 50%; transition: spin 1s linear infinite; border-top: 30px solid dodgerblue; width: 150px; height: 150px; text-align: center; position: fixed;"></div></div>
+        <div id="loadingScreen" style="position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box;"><div style="border: 30px solid var(--loader); border-radius: 50%; animation: spin 1s linear infinite; border-top: 30px solid var(--loaderTop); width: 150px; height: 150px; position: fixed; transition: 0s; transform: translateX(50%);"></div></div>
         <div class="pageContent">
             <p id="description">Just a moment...</p>
             <ul class="footer">
