--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <meta name="keywords" content="mtm828, mtm, 828, github, scratch, developer">
         <meta name="description" content="MTM828">
         <meta name="author" content="MTM828">
-        <meta http-equiv="refresh" content="120">
         <meta name="charset" content="utf-8">
         <style>
             @keyframes spin {
@@ -28,7 +27,7 @@
             </li>
         </ul>
         <div class="topNavbarWrapper"></div>
-        <div id="loadingScreen" style="transition: 0s; justify-content: center; position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box;"><div style="position: fixed; top: 0; bottom: 0; left: 0; right: 0; border: 30px solid var(--loader); border-radius: 50%; animation: spin 1s linear infinite; border-top: 30px solid var(--loaderTop); width: 150px; height: 150px; position: fixed; transition: 0s;"></div></div>
+        <div id="loadingScreen" style="transition: 0s; position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box;"><div style="position: absolute; top: 50%; bottom: 50%; left: 50%; right: 50%; border: 30px solid var(--loader); border-radius: 50%; animation: spin 1s linear infinite; border-top: 30px solid var(--loaderTop); width: 150px; height: 150px; position: fixed; transition: 0s;"></div></div>
         <div class="pageContent">
             <p id="description">Just a moment...</p>
             <ul class="footer">
