--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </li>
         </ul>
         <div class="topNavbarWrapper"></div>
-        <div id="loadingScreen" style="transition: 0s; position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box;"><div style="position: absolute; top: 25%; bottom: 25%; left: 25%; right: 25%; border: 30px solid var(--loader); border-radius: 50%; animation: spin 1s linear infinite; border-top: 30px solid var(--loaderTop); width: 150px; height: 150px; position: fixed; transition: 0s;"></div></div>
+        <div id="loadingScreen" style="transition: 0s; position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box;"><div style="position: absolute; top: 40%; bottom: 40%; left: 40%; right: 40%; border: 30px solid var(--loader); border-radius: 50%; animation: spin 1s linear infinite; border-top: 30px solid var(--loaderTop); width: 20%; height: 20%; position: fixed; transition: 0s;"></div></div>
         <div class="pageContent">
             <p id="description">Just a moment...</p>
             <ul class="footer">
