--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>MTM828 - Home</title>
-        <link rel="icon" href="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
+        <link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel|Alata">
         <link rel="stylesheet" href="/RECOURCES/CSS.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
