--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="topNavbarWrapper"></div>
         <div id="loadingScreen" style="transition: 0s; position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box;"><div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; border: 30px solid var(--loader); border-radius: 50%; animation: spin 1s linear infinite; border-top: 30px solid var(--loaderTop); width: 150px; height: 150px; transition: 0s; margin: auto;"></div></div>
         <div class="pageContent">
+            <p>sshiiiiiiiii</p>
             <p id="description">Just a moment...</p>
             <ul class="footer">
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a></li>
