--- a/index.html
+++ b/index.html
@@ -68,4 +68,5 @@
             setTimeout(function() {hideLoadingScreen(); initDesc();}, 1000);
         }
     </script>
+    <script  src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
 </html>
