--- a/index.html
+++ b/index.html
@@ -68,5 +68,79 @@
             setTimeout(function() {hideLoadingScreen(); initDesc();}, 1000);
         }
     </script>
-    <script  src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+    <script  src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js">
+        var camera, scene, renderer;
+
+var geometry, material, box;
+
+ 
+
+init();
+
+animate();
+
+ 
+
+function init() {
+
+ 
+
+	scene = new THREE.Scene();
+
+ 
+
+	geometry = new THREE.BoxGeometry();
+
+	material = new THREE.MeshNormalMaterial();
+
+	box = new THREE.Mesh( geometry, material );
+
+	scene.add( box );
+
+ 
+
+    	var fov = 70;
+
+    	var aspect = window.innerWidth / window.innerHeight;
+
+    	var near = 0.10;
+
+    	var far = 100;
+
+    	camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
+
+	camera.position.z = 4;
+
+ 
+
+	renderer = new THREE.WebGLRenderer( { antialias: true } );
+
+	renderer.setSize( window.innerWidth, window.innerHeight );
+
+	document.body.appendChild( renderer.domElement );
+
+}
+
+ 
+
+function animate() {
+
+	requestAnimationFrame( animate );
+
+    	autoRotate();
+
+	renderer.render( scene, camera );
+
+}
+
+ 
+
+function autoRotate() {
+
+	box.rotation.x += 0.01;
+
+	box.rotation.y += 0.02;
+
+}
+    </script>
 </html>
