--- a/index.html
+++ b/index.html
@@ -68,78 +68,39 @@
             setTimeout(function() {hideLoadingScreen(); initDesc();}, 1000);
         }
     </script>
-    <script  src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js">
-        var camera, scene, renderer;
+    <script  src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js">import * as THREE from './js/three.module.js';
 
-var geometry, material, box;
-
- 
+let camera, scene, renderer;
+let geometry, material, mesh;
 
 init();
 
-animate();
-
- 
-
 function init() {
 
- 
+	camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 0.01, 10 );
+	camera.position.z = 1;
 
 	scene = new THREE.Scene();
 
- 
-
-	geometry = new THREE.BoxGeometry();
-
+	geometry = new THREE.BoxGeometry( 0.2, 0.2, 0.2 );
 	material = new THREE.MeshNormalMaterial();
 
-	box = new THREE.Mesh( geometry, material );
-
-	scene.add( box );
-
- 
-
-    	var fov = 70;
-
-    	var aspect = window.innerWidth / window.innerHeight;
-
-    	var near = 0.10;
-
-    	var far = 100;
-
-    	camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
-
-	camera.position.z = 4;
-
- 
+	mesh = new THREE.Mesh( geometry, material );
+	scene.add( mesh );
 
 	renderer = new THREE.WebGLRenderer( { antialias: true } );
-
 	renderer.setSize( window.innerWidth, window.innerHeight );
-
+	renderer.setAnimationLoop( animation );
 	document.body.appendChild( renderer.domElement );
 
 }
 
- 
+function animation( time ) {
 
-function animate() {
-
-	requestAnimationFrame( animate );
-
-    	autoRotate();
+	mesh.rotation.x = time / 2000;
+	mesh.rotation.y = time / 1000;
 
 	renderer.render( scene, camera );
-
-}
-
- 
-
-function autoRotate() {
-
-	box.rotation.x += 0.01;
-
-	box.rotation.y += 0.02;
 
 }
     </script>
