--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@ init();
 function init() {
 
 	camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 0.01, 10 );
-	camera.position.z = 1;
+	camera.position.z = 100;
+        document.body.appendChild(renderer.domElement);
 
 	scene = new THREE.Scene();
 
