--- a/3D.html
+++ b/3D.html
@@ -1,6 +1,6 @@
 <head>
 <script type="module">
-import * as THREE from './resources/threejs/r122/build/three.module.js';
+import * as THREE from 'https://github.com/mrdoob/three.js/build/three.module.js';
 function main() {
   const canvas = document.querySelector('#c');
   const renderer = new THREE.WebGLRenderer({canvas});
