--- a/3D.html
+++ b/3D.html
@@ -1,6 +1,6 @@
 <head>
 <script type="module">
-import * as THREE from './build/three.module.js';
+import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.114/build/three.module.js';
 function main() {
   const canvas = document.querySelector('#c');
   const renderer = new THREE.WebGLRenderer({canvas});
