--- a/3D.html
+++ b/3D.html
@@ -1,6 +1,7 @@
 <head>
 <script type="module">
 import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.114/build/three.module.js';
+
 function main() {
   const canvas = document.querySelector('#c');
   const renderer = new THREE.WebGLRenderer({canvas});
@@ -15,11 +16,11 @@ function main() {
   const scene = new THREE.Scene();
 
   {
-  const color = 0xFFFFFF;
-  const intensity = 1;
-  const light = new THREE.DirectionalLight(color, intensity);
-  light.position.set(-1, 2, 4);
-  scene.add(light);
+    const color = 0xFFFFFF;
+    const intensity = 1;
+    const light = new THREE.DirectionalLight(color, intensity);
+    light.position.set(-1, 2, 4);
+    scene.add(light);
   }
 
   const boxWidth = 1;
@@ -27,16 +28,32 @@ function main() {
   const boxDepth = 1;
   const geometry = new THREE.BoxGeometry(boxWidth, boxHeight, boxDepth);
 
-  const material = new THREE.MeshPhongMaterial({color: 0x44aa88});  // greenish blue
+  function makeInstance(geometry, color, x) {
+    const material = new THREE.MeshPhongMaterial({color});
 
-  const cube = new THREE.Mesh(geometry, material);
-  scene.add(cube);
+    const cube = new THREE.Mesh(geometry, material);
+    scene.add(cube);
+
+    cube.position.x = x;
+
+    return cube;
+  }
+
+  const cubes = [
+    makeInstance(geometry, 0x44aa88,  0),
+    makeInstance(geometry, 0x8844aa, -2),
+    makeInstance(geometry, 0xaa8844,  2),
+  ];
 
   function render(time) {
     time *= 0.001;  // convert time to seconds
 
-    cube.rotation.x = time;
-    cube.rotation.y = time;
+    cubes.forEach((cube, ndx) => {
+      const speed = 1 + ndx * .1;
+      const rot = time * speed;
+      cube.rotation.x = rot;
+      cube.rotation.y = rot;
+    });
 
     renderer.render(scene, camera);
 
