--- a/3D.html
+++ b/3D.html
@@ -1,4 +1,16 @@
 <head>
+<style>
+html, body {
+   margin: 0;
+   height: 100%;
+}
+#c {
+   width: 100%;
+   height: 100%;
+   display: block;
+}
+</style>
+
 <script type="module">
 import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.114/build/three.module.js';
 
@@ -45,8 +57,25 @@ function main() {
     makeInstance(geometry, 0xaa8844,  2),
   ];
 
+  function resizeRendererToDisplaySize(renderer) {
+    const canvas = renderer.domElement;
+    const width = canvas.clientWidth;
+    const height = canvas.clientHeight;
+    const needResize = canvas.width !== width || canvas.height !== height;
+    if (needResize) {
+      renderer.setSize(width, height, false);
+    }
+    return needResize;
+  }
+
   function render(time) {
-    time *= 0.001;  // convert time to seconds
+    time *= 0.001;
+
+    if (resizeRendererToDisplaySize(renderer)) {
+      const canvas = renderer.domElement;
+      camera.aspect = canvas.clientWidth / canvas.clientHeight;
+      camera.updateProjectionMatrix();
+    }
 
     cubes.forEach((cube, ndx) => {
       const speed = 1 + ndx * .1;
@@ -59,8 +88,8 @@ function main() {
 
     requestAnimationFrame(render);
   }
-  requestAnimationFrame(render);
 
+  requestAnimationFrame(render);
 }
 
 main();
