--- a/3D.html
+++ b/3D.html
@@ -57,8 +57,26 @@ function main() {
     makeInstance(geometry, 0xaa8844,  2),
   ];
 
+  function resizeRendererToDisplaySize(renderer) {
+    const canvas = renderer.domElement;
+    const pixelRatio = window.devicePixelRatio;
+    const width  = canvas.clientWidth  * pixelRatio | 0;
+    const height = canvas.clientHeight * pixelRatio | 0;
+    const needResize = canvas.width !== width || canvas.height !== height;
+    if (needResize) {
+      renderer.setSize(width, height, false);
+    }
+    return needResize;
+  }
+
   function render(time) {
-    time *= 0.001;  // convert time to seconds
+    time *= 0.001;
+
+    if (resizeRendererToDisplaySize(renderer)) {
+      const canvas = renderer.domElement;
+      camera.aspect = canvas.clientWidth / canvas.clientHeight;
+      camera.updateProjectionMatrix();
+    }
 
     cubes.forEach((cube, ndx) => {
       const speed = 1 + ndx * .1;
@@ -71,8 +89,8 @@ function main() {
 
     requestAnimationFrame(render);
   }
-  requestAnimationFrame(render);
 
+  requestAnimationFrame(render);
 }
 
 main();
