--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>MTM828 - Home</title>
         <link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel|Alata">
-        <link rel="stylesheet" href="/RECOURCES/CSS.css">
+        <link rel="stylesheet" href="/recources/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="keywords" content="mtm828, mtm, 828, github, scratch, developer">
+        <meta name="keywords" content="mtm828, github, developer">
         <meta name="description" content="MTM828">
         <meta name="author" content="MTM828">
         <meta name="charset" content="utf-8">
@@ -35,7 +35,7 @@
             </ul>
         </div>
     </body>
-    <script src="/RECOURCES/JS.js"></script>
+    <script src="/recources/script.js"></script>
     <script>
         function hideLoadingScreen() {
             var screen = document.getElementById("loadingScreen");
@@ -56,7 +56,7 @@
                     desc.innerHTML += "</ul></div><br>"
                 }
             }
-            ajax.open("GET", "/RECOURCES/JSON/ABOUT.json", true);
+            ajax.open("GET", "/recources/json/description.json", true);
             ajax.send();
         }
         window.onload = function() {
