--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>MTM828 - Home</title>
-        <link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
+        <link rel="shortcut icon" href="/recourses/img/profilePicture.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel|Alata">
         <link rel="stylesheet" href="/recources/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div id="loadingScreen" style="transition: 0s; position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box; z-index: 1;"><div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; border: 30px solid var(--loader); border-radius: 50%; animation: spin 1s linear infinite; border-top: 30px solid var(--loaderTop); width: 150px; height: 150px; transition: 0s; margin: auto;"></div></div>
-        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel; width:">MTM828</h1></a>
+        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="/recources/img/profilePicture.png"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel; width:">MTM828</h1></a>
         <ul class="topNav">
             <li><a href="">Link A</a></li>
             <li><a href="">Link B</a></li>
@@ -29,7 +29,7 @@
             </ul>
         </div>
     </body>
-    <script src="/recources/script.js">
+    <script>
         ajax = new XMLHttpRequest();
         ajax.responceType = "json";
         ajax.onreadystatechange = function () {
@@ -47,4 +47,5 @@
         ajax.open("GET", "/recources/json/description.json", true);
         ajax.send();
     </script>
+    <script src="/recourses/img/profilePicture.png"></script>
 </html>
