--- a/index.html
+++ b/index.html
@@ -47,5 +47,5 @@
         ajax.open("GET", "/recources/json/description.json", true);
         ajax.send();
     </script>
-    <script src="/recourses/img/profilePicture.png"></script>
+    <script src="/recourses/script.js"></script>
 </html>
