--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>
         </div>
     </body>
-    <script>
+    <!--<script>
         ajax = new XMLHttpRequest();
         ajax.responceType = "json";
         ajax.onreadystatechange = function () {
@@ -46,6 +46,6 @@
         }
         ajax.open("GET", "/recources/json/description.json", true);
         ajax.send();
-    </script>
+    </script>-->
     <script src="/recourses/script.js"></script>
 </html>
