--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <title>MTM828 - Home</title>
-        <link rel="shortcut icon" href="/recourses/img/profilePicture.png">
+        <link rel="shortcut icon" href="https://mtm828.github.io/recourses/img/profilePicture.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel|Alata">
-        <link rel="stylesheet" href="/recources/style.css">
+        <link rel="stylesheet" href="https://mtm828.github.io/recources/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="mtm828, github, developer">
         <meta name="description" content="MTM828">
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div id="loadingScreen" style="transition: 0s; position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box; z-index: 1;"><div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; border: 30px solid var(--loader); border-radius: 50%; animation: spin 1s linear infinite; border-top: 30px solid var(--loaderTop); width: 150px; height: 150px; transition: 0s; margin: auto;"></div></div>
-        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="/recources/img/profilePicture.png"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel; width:">MTM828</h1></a>
+        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://mtm828.github.io/recources/img/profilePicture.png"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel; width:">MTM828</h1></a>
         <ul class="topNav">
             <li><a href="">Link A</a></li>
             <li><a href="">Link B</a></li>
@@ -24,8 +24,8 @@
         <div class="pageContent">
             <p id="description">Just a moment...</p>
             <ul class="footer">
-                <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a></li>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://mtm828.github.io/recources/img/profilePicture.png"></a></li>
+                <li><a href="https://mm828.github.io">Home</a></li>
             </ul>
         </div>
     </body>
@@ -44,8 +44,8 @@
                 desc.innerHTML += "</ul></div><br>"
             }
         }
-        ajax.open("GET", "/recources/json/description.json", true);
+        ajax.open("GET", "https://mtm828.github.io/recources/json/description.json", true);
         ajax.send();
     </script>
-    <script src="/recourses/script.js"></script>
+    <script src="https://mtm828.github.io/recources/script.js"></script>
 </html>
