--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="https://mtm828.github.io/recources/script.js"></script>
     </head>
     <body>
-        <div id="loadingScreen" style="transition: 0s; position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box; z-index: 1;"><div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; border: 30px solid var(--loader); border-radius: 50%; animation: spin 1s linear infinite; border-top: 30px solid var(--loaderTop); width: 150px; height: 150px; transition: 0s; margin: auto;"></div></div>
+        <div id="loadingScreen"><div id="loader"></div></div>
         <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://mtm828.github.io/recources/img/profilePicture.png"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel; width:">MTM828</h1></a>
         <ul class="topNav">
             <li><a href="">Link A</a></li>
