--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div id="loadingScreen"><div id="loader"></div></div>
-        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://mtm828.github.io/recources/img/profilePicture.png"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel; width:">MTM828</h1></a>
+        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://mtm828.github.io/recources/img/profilePicture.png"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: 'raleway'; width:">MTM828</h1></a>
         <ul class="topNav">
             <li><a href="">Link A</a></li>
             <li><a href="">Link B</a></li>
