--- a/index.html
+++ b/index.html
@@ -37,15 +37,22 @@
                 var json = JSON.parse(JSON.parse(JSON.stringify(this.responseText)));
 
                 desc = document.getElementById("description");
-                desc.innerHTML = "";
+                var descContent;
 
-                desc.innerHTML += "<p style=\"font-family: 'raleway'; text-align: center;\">Hey there, I'm " + json.properties.name + "!</p><br>";
-                desc.innerHTML += "<p>I code in "
+                descContent += "<p style=\"font-family: 'raleway'; text-align: center;\">Hey there, I'm " + json.properties.name + "!</p><br>";
+                descContent += "<p>I code in "
                 for (i = 0; i < json.properties.langs.length; i++) {
-                    if (i < json.properties.langs.length - 1) {desc.innerHTML += json.properties.langs[i] + ", ";} else if (i == json.properties.langs.length) {desc.innerHTML += json.properties.langs[i];} else {desc.innerHTML += json.properties.langs[i] + " and ";}
+                    if (i < json.properties.langs.length - 1) {
+                        descContent += json.properties.langs[i] + ", ";
+                    } else if (i == json.properties.langs.length - 1) {
+                        descContent += json.properties.langs[i] + " and ";
+                    } else {
+                        descContent += json.properties.langs[i];
+                    }
                 }
-                desc.innerHTML += "</p><br>"
+                descContent += ".</p><br>";
 
+                desc.innerHTML = descContent;
             }
         }
         ajax.open("GET", "https://mtm828.github.io/recources/json/description.json", true);
