--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     if (i < json.properties.langs.length - 1) {
                         descContent += json.properties.langs[i] + ", ";
                     } else if (i == json.properties.langs.length - 1) {
-                        " and " + descContent += json.properties.langs[i];
+                        descContent += " and " + json.properties.langs[i];
                     } else {
                         descContent += json.properties.langs[i];
                     }
