--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             </li>
         </ul>
         <div class="pageContent">
-            <p id="description">Just a moment...</p>
+            <!--<p id="description">Just a moment...</p>-->
+            <p style="font-family: 'raleway'; text-align: center;">Hey there, I'm MTM828!</p><br><br>
+            <p>I'm a software and web developer, I know <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, <b>Python</b>, <b>C++</b>, <b>Java</b> and also <a href="https://scratch.mit.edu/">Scratch</a>.</p><br>
+            <p>Here are some of my projects, too.</p>
             <ul class="footer">
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://mtm828.github.io/recources/img/profilePicture.png"></a></li>
                 <li><a href="https://mm828.github.io">Home</a></li>
@@ -30,6 +33,7 @@
         </div>
     </body>
     <script>
+        /*
         ajax = new XMLHttpRequest();
         ajax.responceType = "json";
         ajax.onreadystatechange = function () {
@@ -40,7 +44,7 @@
                 var descContent = "";
 
                 descContent += "<p style=\"font-family: 'raleway'; text-align: center;\">Hey there, I'm " + json.properties.name + "!</p><br>";
-                descContent += "<p>I code in "
+                descContent += "<p>I code in ";
                 for (i = 0; i < json.properties.langs.length; i++) {
                     if (i < json.properties.langs.length - 1) {
                         descContent += json.properties.langs[i] + ", ";
@@ -50,12 +54,13 @@
                         descContent += json.properties.langs[i];
                     }
                 }
-                descContent += ".</p><br>";
+                descContent += ".<br><br>I am both a software and web developer.</p><br>";
+                descContent += "";
 
                 desc.innerHTML = descContent.toString();
             }
         }
         ajax.open("GET", "https://mtm828.github.io/recources/json/description.json", true);
-        ajax.send();
+        ajax.send();*/
     </script>
 </html>
