--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="https://mtm828.github.io/recources/script.js"></script>
     </head>
     <body>
-        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://mtm828.github.io/recources/img/profilePicture.png"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: 'raleway'; width:">MTM828</h1></a>
+        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://mtm828.github.io/recources/icon.png"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: 'raleway'; width:">MTM828</h1></a>
         <ul class="topNav">
             <li><a href="">Link A</a></li>
             <li><a href="">Link B</a></li>
@@ -22,14 +22,14 @@
         <div class="pageContent">
             <p style="font-family: 'raleway'; text-align: center;">Hey there, I'm MTM828!</p><br><br>
             <p>I'm a software and web developer, I know <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, <b>Python</b>, <b>C++</b>, <b>Java</b> and also <a href="https://scratch.mit.edu/">Scratch</a>.</p><br>
-            <p>Here are some of my projects too:</p><br>
-            <div style="margin: auto;">
-                <iframe loading="lazy" src="https://scratch.mit.edu/projects/445582283/embed/" allowtransparency="true" width="435" height="348" frameborder="0" scrolling="no" allowfullscreen></iframe>
-                <iframe loading="lazy" src="https://scratch.mit.edu/projects/429561174/embed/" allowtransparency="true" width="435" height="348" frameborder="0" scrolling="no" allowfullscreen></iframe>
-                <iframe loading="lazy" src="https://scratch.mit.edu/projects/455644795/embed/" allowtransparency="true" width="435" height="348" frameborder="0" scrolling="no" allowfullscreen></iframe>
+            <p>Here are some of my projects:</p><br>
+            <div style="width: 100%;">
+                <iframe style="margin-left: auto; margin-right: auto;" loading="lazy" src="https://scratch.mit.edu/projects/445582283/embed/" allowtransparency="true" width="435" height="348" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                <iframe style="margin-left: auto; margin-right: auto;" loading="lazy" src="https://scratch.mit.edu/projects/429561174/embed/" allowtransparency="true" width="435" height="348" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                <iframe style="margin-left: auto; margin-right: auto;" loading="lazy" src="https://scratch.mit.edu/projects/455644795/embed/" allowtransparency="true" width="435" height="348" frameborder="0" scrolling="no" allowfullscreen></iframe>
             </div>
             <ul class="footer">
-                <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://mtm828.github.io/recources/img/profilePicture.png"></a></li>
+                <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://mtm828.github.io/recources/icon.png"></a></li>
                 <li><a href="https://mm828.github.io">Home</a></li>
             </ul>
         </div>
