--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <p style="font-family: 'raleway'; text-align: center;">Hey there, I'm MTM828!</p><br><br>
             <p>I'm a software and web developer, I know <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, <b>Python</b>, <b>C++</b>, <b>Java</b> and also <a href="https://scratch.mit.edu/">Scratch</a>.</p><br>
             <p>Here are some of my projects:</p><br>
-            <div style="width: 100%; display: flex; justify-content: center; overflow-wrap: break-word;">
-                <iframe loading="lazy" src="https://scratch.mit.edu/projects/445582283/embed/" allowtransparency="true" width="435" height="348" frameborder="0" scrolling="no" allowfullscreen></iframe>
-                <iframe loading="lazy" src="https://scratch.mit.edu/projects/429561174/embed/" allowtransparency="true" width="435" height="348" frameborder="0" scrolling="no" allowfullscreen></iframe>
-                <iframe loading="lazy" src="https://scratch.mit.edu/projects/455644795/embed/" allowtransparency="true" width="435" height="348" frameborder="0" scrolling="no" allowfullscreen></iframe>
+            <div style="width: 100%; display: flex; justify-content: center;">
+                <iframe style="object-fit: scale-down;" loading="lazy" src="https://scratch.mit.edu/projects/445582283/embed/" allowtransparency="true" width="435" height="348" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                <iframe style="object-fit: scale-down;" loading="lazy" src="https://scratch.mit.edu/projects/429561174/embed/" allowtransparency="true" width="435" height="348" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                <iframe style="object-fit: scale-down;" loading="lazy" src="https://scratch.mit.edu/projects/455644795/embed/" allowtransparency="true" width="435" height="348" frameborder="0" scrolling="no" allowfullscreen></iframe>
             </div>
             <ul class="footer">
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://mtm828.github.io/recources/icon.png"></a></li>
