--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <script src="https://mtm828.github.io/recources/script.js"></script>
     </head>
     <body>
-        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://mtm828.github.io/recources/icon.png"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: 'raleway'; width:">MTM828</h1></a>
+        <a href="https://github.com/mtm828">
+            <img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://mtm828.github.io/recources/icon.png">
+            <h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: 'raleway'; width:">MTM828</h1>
+        </a>
         <ul class="topNav">
             <li><a href="">Link A</a></li>
             <li><a href="">Link B</a></li>
@@ -25,7 +28,7 @@
             <h1>About Me</h1>
             <p>I'm a software and web developer, I know <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, <b>Python</b>, <b>C++</b> and <b>Java</b>.</p><br>
             <h1>My Projects</h1>
-            <iframe src="https://mtm828.github.io/3d-scene/" style="width: 300px; height: 300px; display: inline-block;"><div><h3>D3</h3><p>Ebic project.</p></div>
+            <iframe src="https://mtm828.github.io/3d-scene/" style="width: 300px; height: 300px; display: inline-block;"><h3 style="display: inline-block;">D3</h3><p style="display: inline-block;"><br>Ebic project.</p>
 
             <ul class="footer">
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://mtm828.github.io/recources/icon.png"></a></li>
