--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <h1>About Me</h1>
             <p>I'm a software and web developer, I know <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, <b>Python</b>, <b>C++</b> and <b>Java</b>.</p><br>
             <p>I enjoy coding <del>in my spare time</del> <u>all day long</u> and I do pretty much nothing else. Nohing.</p><br>
-            <p>I'm currently trying to to some 3D stuff in JavaScript, with <a href="https://github.com/mrdoob/threejs">Three.js</a>.<a href="https://mtm828.github.io/3d-solar-system">This</a> is my first project.</p>
+            <p>I'm currently trying to to some 3D stuff in JavaScript, with <a href="https://github.com/mrdoob/three.js">Three.js</a>.<a href="https://mtm828.github.io/3d-solar-system">This</a> is my first project.</p><br■
             <small>What else am I supposed to write here?</small>
             <h1>My Projects</h1>
             <div class="projectCard">
-                <iframe src="https://mtm828.github.io/3d-solar-system"></iframe>
+                <div cless="projectCardDemo"><iframe src="https://mtm828.github.io/3d-solar-system"></iframe></div>
                 <div class="projectCardDesc">
                     <h3 style=>D3</h3>
                     <p>Ebic project.<br><br><br><br>sep bru<br><br><br><br>sep bru</p>
