--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <div cless="projectCardDemo"><iframe src="https://mtm828.github.io/3d-solar-system"></iframe></div>
                 <div class="projectCardDesc">
                     <h3 style=>D3</h3>
-                    <p>Ebic project.<br><br><br><br>sep bru<br><br><br><br>sep bru</p>
+                    <p>Ebic project.<br><br><br><br>jfyj,tfltjjflt<br><br><br><br>e</p>
                 </div>
             </div>
-            <ul><li>bleh</li><li>blah</li><li>bles</li></ul>
+            <ul><li>blah</li><li>blah</li><li>blah</li></ul>
 
             <ul class="footer">
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="./recources/icon.png"></a></li>
