--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
     <head>
         <title>MTM828 - Home</title>
-        <link rel="stylesheet" href="./recources/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="mtm828, github, developer">
         <meta name="description" content="MTM828">
         <meta name="author" content="MTM828">
         <meta name="charset" content="utf-8">
-        <script src="./recources/script.js"></script>
+        <script type="text/javascript" src="./recources/script.js"></script>
     </head>
     <body>
         <a href="https://github.com/mtm828">
@@ -19,23 +18,23 @@
             <li><a href="">Link A</a></li>
             <li><a href="">Link B</a></li>
             <li style="float: right;">
-                <a><label class="switch"><input type="checkbox" id="darkModeSwitch"><span class="slider" onclick="toggleDarkMode()"></span></label></a>
+                <label class="switch"><input type="checkbox" id="darkModeSwitch"><span class="slider" onclick="toggleDarkMode()"></span></label>
             </li>
         </ul>
         <div class="pageContent">
 
-            <p style="font-family: 'raleway'; text-align: center;">Hey there, I'm MTM828!</p><br><br>
-            <h1>About Me</h1>
+            <h2 style="font-family: 'raleway'; text-align: center;">Hey there, I'm MTM828!</p><br><br>
+            <h3>About Me</h1>
             <p>I'm a software and web developer, I know <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, <b>Python</b>, <b>C++</b> and <b>Java</b>.</p><br>
-            <p>I enjoy coding <del>in my spare time</del> <u>all day long</u> and I do pretty much nothing else. Nohing.</p><br>
-            <p>I'm currently trying to to some 3D stuff in JavaScript, with <a href="https://github.com/mrdoob/three.js">Three.js</a>.<a href="https://mtm828.github.io/3d-solar-system">This</a> is my first project.</p><br■
+            <p>I enjoy coding <u>in my spare time</u>.</p><br>
+            <p>I'm currently trying to to some 3D stuff in JavaScript, with <a href="https://github.com/mrdoob/three.js">Three.js</a>.</p><br>
             <small>What else am I supposed to write here?</small>
-            <h1>My Projects</h1>
+            <h3>My Projects</h3>
             <div class="projectCard">
-                <div cless="projectCardDemo"><iframe src="https://mtm828.github.io/3d-solar-system"></iframe></div>
+                <iframe class="projectCardDemo" src="https://mtm828.github.io/3d-solar-system"></iframe>
                 <div class="projectCardDesc">
-                    <h3 style=>D3</h3>
-                    <p>Ebic project.<br><br><br><br>jfyj,tfltjjflt<br><br><br><br>e</p>
+                    <h4>D3</h3>
+                    <p>Da ebic project.<br><br><br><br>jfyj,tfltjjflt<br><br><br><br>e</p>
                 </div>
             </div>
             <ul><li>blah</li><li>blah</li><li>blah</li></ul>
