--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <title>MTM828 - Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="keywords" content="mtm828, github, developer">
+        <meta name="keywords" content="mtm828, github">
         <meta name="description" content="MTM828">
         <meta name="author" content="MTM828">
         <meta name="charset" content="utf-8">
-        <script type="text/javascript" src="./recources/script.js"></script>
+        <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
         <a href="https://github.com/mtm828">
