--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <ul><li>blah</li><li>blah</li><li>blah</li></ul>
 
             <ul class="footer">
+                <p id="sig"></p>
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="./recources/icon.png"></a></li>
                 <li><a href="https://mm828.github.io">Home</a></li>
             </ul>
