--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <a href="https://github.com/mtm828">
-            <img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="./recources/icon.png">
+            <img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="./img/icon.png">
             <h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: 'raleway';">MTM828</h1>
         </a>
         <ul class="topNav">
@@ -42,7 +42,7 @@
 
             <ul class="footer">
                 <p id="sig"></p>
-                <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="./recources/icon.png"></a></li>
+                <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="./img/icon.png"></a></li>
                 <li><a href="https://mm828.github.io">Home</a></li>
             </ul>
         </div>
