--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         <ul class="topNav">
             <li><a href="">Link A</a></li>
             <li><a href="">Link B</a></li>
-            <li style="float: right;">
-                <label class="switch"><input type="checkbox" id="darkModeSwitch"><span class="slider" onclick="toggleDarkMode()"></span></label>
-            </li>
+            <li><a href="" style="float: right;">Link C</a></li>
         </ul>
         <div class="pageContent">
 
@@ -43,6 +41,7 @@
             <ul class="footer">
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="./img/icon.png"></a></li>
                 <li><a href="https://mm828.github.io">Home</a></li>
+                <li onclick="toggleDarkMode()"><b id="darkModeButton"><b></li>
             </ul>
         </div>
     </body>
